1/11/12 Simsharing: add UserComponent chaining for FaucetNode and its FaucetSlider
1/11/12 Simsharing: remove broken drag handler accessor from FaucetNode, make FaucetSliderNode a subclass of SimSharingHSliderNode
1/11/12 Simsharing: remove simsharing from HSliderNode and VSliderNode, to be added via subclassing
1/11/12 Simsharing: add PInputEvent parameter to SimSharingDragHandler methods that are intended to be overridden
1/11/12 Simsharing: factor out SimSharingDragPoints, for use in Swing and Piccolo drag handlers
1/4/12 Added sim sharing features to play/pause/step and icon buttons
1/2/12 #3189, Moved setCursor to subclass DynamicCursorHandler
12/22/11 #3199, FaucetNode cleanup
12/22/11 #3198, simplify FaucetSliderNode, behavior unchanged for existing clients
12/22/11 #3197, add sim-sharing to FaucetNode
12/22/11 #3196, add sim-sharing to HSliderNode and VSliderNode
12/21/11 FaucetNode fixes #3192 and #3193
12/20/11 #3175, more refinements to sim-sharing drag handlers
12/20/11 add PiccoloPhetResources, convenience singleton for accessing piccolo-phet jar resources
12/19-11 #3189, Added "setCursor" method to CursorHandler
12/13/11 #3175, overhaul sim-sharing drag handlers to support optional functions for start/end/drag
12/12/11 Added RichPNode and methods to facilitate layouts
12/12/11 Fixed PhetTabbedPane's TabPane handling of tab removal for visibility and re-layout
12/6/11 #3170, change ConductivityTesterNode so that separate sim-sharing args can be provided to positive and negative probes
12/5/11 #3170, #3175 add sim-sharing to conductivity tester by converting probe drag handlers to subclass of SimSharingDragSequenceHandler
12/5/11 #3175 switch to subclassing for sim-sharing drag handlers
12/5/11 #3175, add "object" parameter to sim-sharing drag handlers
12/5/11 Added a speedometer
12/5/11 Added a getter to make it possible to override backgrounds
12/2/11 #3136, move piccolo-phet string literals to sim-sharing object/action/parameter classes